--- a/style0.css
+++ b/style0.css
@@ -17,10 +17,9 @@ font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", san
 
 }
 
-p {color: #333333;list .title {
-	font-size: 16px;
-}
-font-size: 1em;
+p {
+color: #333333;
+font-size: 2em;
 margin: 1px 35px;
 }
 
